# ai-coder

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
ai_coder/: file_utils.py  prompts.py
examples/: hello-world.md
tests/: test_ai_coder.py
